# cmake.spec

code/01-build-type/: CMakeLists.txt  main.cc
code/02-trans-deps/object-deps/obj-both/interface/: CMakeLists.txt  README.md
code/02-trans-deps/object-deps/obj-both/interface/foo/include/: foo.h
code/02-trans-deps/object-deps/obj-both/interface/foo/src/: foo.c
code/02-trans-deps/object-deps/obj-both/private/: README.md
code/02-trans-deps/object-deps/obj-both/private/foo/: CMakeLists.txt
code/02-trans-deps/object-deps/obj-both/private/main/: main.c
code/02-trans-deps/object-deps/obj-both/public/: README.md
code/02-trans-deps/object-deps/obj-both/public/bar/: CMakeLists.txt
code/02-trans-deps/object-deps/obj-both/public/foo/src/: foo.c
code/02-trans-deps/object-deps/obj-both/public/main/: CMakeLists.txt
code/02-trans-deps/object-deps/obj-lhs/interface/: README.md
code/02-trans-deps/object-deps/obj-lhs/interface/foo/: CMakeLists.txt
code/02-trans-deps/object-deps/obj-lhs/interface/main/: main.c
code/02-trans-deps/object-deps/obj-lhs/private/: README.md
code/02-trans-deps/object-deps/obj-lhs/private/bar/: CMakeLists.txt
code/02-trans-deps/object-deps/obj-lhs/public/: README.md
code/02-trans-deps/object-deps/obj-lhs/public/bar/src/: bar.c
code/02-trans-deps/object-deps/obj-lhs/public/foo/: CMakeLists.txt
code/02-trans-deps/object-deps/obj-lhs/public/main/: main.c
code/02-trans-deps/object-deps/obj-rhs/interface/: README.md
code/02-trans-deps/object-deps/obj-rhs/interface/bar/include/: bar.h
code/02-trans-deps/object-deps/obj-rhs/interface/bar/src/: bar.c
code/02-trans-deps/object-deps/obj-rhs/interface/foo/: CMakeLists.txt
code/02-trans-deps/object-deps/obj-rhs/interface/foo/src/: foo.c
code/02-trans-deps/object-deps/obj-rhs/interface/main/: main.c
code/02-trans-deps/object-deps/obj-rhs/private/: README.md
code/02-trans-deps/object-deps/obj-rhs/private/foo/: CMakeLists.txt
code/02-trans-deps/object-deps/obj-rhs/private/foo/src/: foo.c
code/02-trans-deps/object-deps/obj-rhs/private/main/: main.c
code/02-trans-deps/object-deps/obj-rhs/public/: README.md
code/02-trans-deps/object-deps/obj-rhs/public/foo/: CMakeLists.txt
code/02-trans-deps/object-deps/obj-rhs/public/foo/include/: foo.h
code/02-trans-deps/object-deps/obj-rhs/public/main/: main.c
code/02-trans-deps/static-deps/interface/: CMakeLists.txt  README.md
code/02-trans-deps/static-deps/interface/bar/: CMakeLists.txt
code/02-trans-deps/static-deps/interface/bar/include/: bar.h  bar_def.h
code/02-trans-deps/static-deps/interface/bar/src/: bar.c
code/02-trans-deps/static-deps/interface/foo/: CMakeLists.txt
code/02-trans-deps/static-deps/interface/foo/include/: foo.h  foo_def.h
code/02-trans-deps/static-deps/interface/foo/src/: foo.c
code/02-trans-deps/static-deps/interface/main/: main.c
code/02-trans-deps/static-deps/private/: CMakeLists.txt  README.md
code/02-trans-deps/static-deps/private/bar/src/: bar.c
code/02-trans-deps/static-deps/private/foo/: CMakeLists.txt
code/02-trans-deps/static-deps/private/foo/src/: foo.c
code/02-trans-deps/static-deps/private/main/: main.c
code/02-trans-deps/static-deps/public/: CMakeLists.txt  README.md
code/02-trans-deps/static-deps/public/bar/include/: bar.h
code/02-trans-deps/static-deps/public/bar/src/: bar.c
code/02-trans-deps/static-deps/public/foo/: CMakeLists.txt
code/02-trans-deps/static-deps/public/foo/include/: foo.h
code/02-trans-deps/static-deps/public/foo/src/: foo.c
code/02-trans-deps/static-deps/public/main/: CMakeLists.txt  main.c
code/03-copts/: CMakeLists.txt
code/03-copts/sub/: CMakeLists.txt
code/04-link/dynamic_link/hello/: hello
code/04-link/dynamic_link/pic/: CMakeLists.txt
code/04-link/dynamic_link/pic/src/bar/: CMakeLists.txt
code/04-link/dynamic_link/shared/: CMakeLists.txt  Makefile  foo.c  main.c
code/04-link/dynamic_link/visibility/: CMakeLists.txt
code/04-link/dynamic_link/visibility/src/bar/: CMakeLists.txt
code/04-link/dynamic_link/visibility/src/bar/include/bar/: bar.h
code/04-link/dynamic_link/visibility/src/bar/src/: bar.c
code/04-link/dynamic_link/visibility/src/foo/: CMakeLists.txt
code/04-link/dynamic_link/visibility/src/foo/include/foo/: foo.h
code/04-link/dynamic_link/visibility/src/foo/src/: foo.c
code/04-link/static_link/circle_deps/: CMakeLists.txt  Makefile  README.md  bar.c
code/04-link/static_link/func_sections/: CMakeLists.txt  README.md
code/04-link/static_link/relocation/: CMakeLists.txt  Makefile  main.c  sum.c
code/04-link/static_link/whole_archive/: CMakeLists.txt  README.md  bar.c  foo1.c  foo2.c  main.c
code/05-pkg/pub_pkg/src/bar/: CMakeLists.txt
code/05-pkg/pub_pkg/src/bar/include/bar/: bar.h
code/05-pkg/pub_pkg/src/bar/src/: bar.c
code/05-pkg/pub_pkg/src/foo/: CMakeLists.txt
code/05-pkg/pub_pkg/src/foo/cmake/: config.cmake.in
code/05-pkg/pub_pkg/src/foo/include/foo/: foo.h
code/05-pkg/pub_pkg/test/: CMakeLists.txt
code/05-pkg/sub_pkg/: CMakeLists.txt
code/05-pkg/sub_pkg/src/: CMakeLists.txt  main.cc
code/06-flow-ctrl/: CMakeLists.txt  cond-info.cmake  host-info.cmake  unquoted-arg.cmake
code/06-flow-ctrl/foreach-cmd/: CMakeLists.txt
code/06-flow-ctrl/if-cmd/: CMakeLists.txt
doc/: 01-intro.md  01-required.md  02-basic.md  02-project.md  03-lang-std.md  03-target.md  04-build-type.md  04-compile-flags.md  04-normal-variable.md  07-if-cmd.md  08-foreach-cmd.md  09-add_subdirectory.md  15-properties.md  16-cross-compile.md
